--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,8 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".activities.AvatarActivityRegister"
             android:screenOrientation="portrait"/>
+        <activity android:name=".activities.ScoresActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
