--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-
-        <activity android:name=".activities.MainActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activities.SettingsActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activities.LoginActivity"
+        <activity
+            android:name=".activities.MainActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.SettingsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.LoginActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,20 +26,31 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.RegisterActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activities.CardsActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activities.PlayActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activities.GameActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activities.RulesActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activities.AvatarActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activities.AvatarActivityRegister"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activities.RegisterActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.CardsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.PlayActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.GameActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.RulesActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.AvatarActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.AvatarActivityRegister"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.ScoresActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activities.BarajaActivity"></activity>
     </application>
 
 </manifest>
