--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.commit451:PhotoView:1.2.4'
+    implementation 'com.google.firebase:firebase-messaging:11.8.0'
+
 }
+apply plugin: 'com.google.gms.google-services'
