--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="dixit.sdm.trabajo.dixit">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <application
         android:allowBackup="true"
@@ -10,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+    android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
             android:name=".activities.MainActivity"
             android:screenOrientation="portrait" />
@@ -39,18 +40,29 @@
             android:name=".activities.GameActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".activities.Game2Activity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".activities.RulesActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".activities.AvatarActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activities.AvatarActivityRegister"
-            android:screenOrientation="portrait" />
-        <activity
             android:name=".activities.ScoresActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".activities.BarajaActivity"></activity>
+        <service
+            android:name=".helpers.MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+        <service
+            android:name=".helpers.MyFirebaseInstanceIDService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+            </intent-filter>
+        </service>
     </application>
-
 </manifest>
