--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,9 @@ dependencies {
     implementation 'com.commit451:PhotoView:1.2.4'
     implementation 'com.google.firebase:firebase-messaging:11.8.0'
 
+    // import room library
+    implementation "android.arch.persistence.room:runtime:1.0.0"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+
 }
 apply plugin: 'com.google.gms.google-services'
