--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
             android:name=".activities.GameActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activities.Game2Activity"
+            android:name=".activities.GameActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".activities.RulesActivity"
@@ -56,7 +56,8 @@
         <activity
             android:name=".activities.BarajaActivity"
             android:screenOrientation="portrait" />
-
+        <activity android:name=".activities.AboutActivity"
+            android:screenOrientation="portrait"/>
         <service
             android:name=".helpers.MyFirebaseMessagingService">
             <intent-filter>
@@ -70,6 +71,7 @@
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
             </intent-filter>
         </service>
+
 
     </application>
 </manifest>
